--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
 		"url": "https://github.com/tmont/fmpl.git"
 	},
 
+	"scripts": {
+		"test": "node_modules/.bin/mocha -R dot --recursive tests",
+		"coverage": "node_modules/.bin/nyc --include src --all --reporter=html --reporter=text node_modules/.bin/mocha -R dot --recursive tests"
+	},
+
 	"devDependencies": {
 		"mocha": "3.2.0",
-		"expect.js": "0.3.1"
+		"expect.js": "0.3.1",
+		"nyc": "10.2.0"
 	}
 }
