--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 
 	"scripts": {
 		"test": "node_modules/.bin/mocha -R dot --recursive tests",
-		"coverage": "node_modules/.bin/nyc --include src --all --reporter=html --reporter=text node_modules/.bin/mocha -R dot --recursive tests"
+		"coverage": "node_modules/.bin/nyc --include index.js --all --reporter=html --reporter=text node_modules/.bin/mocha -R dot --recursive tests"
 	},
 
 	"devDependencies": {
